Update Dockerfile and LocalSettings template to enforce InnoDB engine for MySQL compatibility with Cloud SQL. Patch SQL files to replace MyISAM with InnoDB and set default table options in LocalSettings.

--- a/LocalSettings.php.template
+++ b/LocalSettings.php.template
@@ -18,6 +18,10 @@ $wgDBpassword = $_ENV['DB_PASSWORD'] ?? '';
 # Database type (mysql or postgres)
 $wgDBtype = $_ENV['DB_TYPE'] ?? 'mysql';
 
+# Force InnoDB engine (Cloud SQL doesn't support MyISAM)
+# This must be set before installation/upgrade
+$wgDBTableOptions = 'ENGINE=InnoDB, DEFAULT CHARSET=utf8mb4';
+
 # Wiki name
 $wgSitename = $_ENV['WIKI_SITENAME'] ?? 'My Wiki';
 
